:rotating_light: s3-integration format and lint warnings